# ShadowsocksQt

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  config.json  main.cpp
lib/: QtSS.h  address.cpp  address.h  addresstester.cpp  addresstester.h  chacha.cpp  chacha.h  cipher.cpp  cipher.h  common.cpp  common.h  controller.cpp  controller.h  encryptor.cpp  encryptor.h  encryptorprivate.cpp  encryptorprivate.h  export.h  profile.cpp  profile.h  tcprelay.cpp  tcprelay.h  tcpserver.cpp  tcpserver.h  udprelay.cpp  udprelay.h
